--- a/1/src/scss/main.scss
+++ b/1/src/scss/main.scss
@@ -1,62 +1,3 @@
-.row {
-    border: none;
-}
-
-.header {
-    height: 125px;
-    background: #424413;
-}
-
-.jumbotron {
-    // height: 550px;
-    background: url('/layout/grass.jpg') no-repeat center;
-    background-size: cover;
-}
-
-.info-content {
-    background: #08a033;
-}
-
-.box-content {
-    min-height: 200px;
-    background: #18a1ab;
-}
-
-.banner-1 {
-    background: #a51b35;
-}
-
-.main-content-2 {
-    background: #21a110;
-}
-
-.banner-2 {
-    background: #afb608;
-}
-
-.gutter .col-md-6 {
-    padding: 0;
-}
-
-
-@media (min-width: 992px) {
-    .wrap {
-        width: 75%;
-    }
-
-    .box-content {
-        margin: 0 1em;
-    }
-}
-
-@media (min-width: 768px) and (max-width: 991.98px) {
-    .gutter .col-md-6 {
-        padding-left: 1em;
-    }
-
-    .gutter .col-md-6:first-child {
-        padding-right: 1em;
-        padding-left: 0;
-    }
-
-}
+@import 'helpers';
+@import 'containers';
+@import 'media';
